Momentum scrolling ends at the wrong place when a scrolling overflow element has a non-zero border https://bugs.webkit.org/show_bug.cgi?id=191322

Reviewed by Dean Jackson.
Source/WebCore:

The scrolling momentum logic in ScrollController::handleWheelEvent() which computes whether the scroll is pinned
to the end makes use of ScrollableArea::visibleContentRect(). RenderLayer's implementation of this was incorrect when
the layer's element had borders, causing the momentum scroll to stop early.

Fix by using the correct size (visible size, not layer size).

Test: fast/scrolling/momentum-scroll-with-borders.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::visibleContentRectInternal const):

LayoutTests:

* fast/scrolling/momentum-scroll-with-borders-expected.txt: Added.
* fast/scrolling/momentum-scroll-with-borders.html: Added.
* platform/ios/TestExpectations:

Canonical link: https://commits.webkit.org/206734@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238576 268f45cc-cd09-0410-ab3c-d52691b4dbfc